# moving-mnist-flax

./: README.md  data_loading.py  pyproject.toml  train.py
data/: .gitignore
layers/: conv_lstm.py  layers.py
metrics/: metrics.py
models/: forecaster.py
tests/: test_conv_lstm.py  test_data_loading.py  test_forecaster.py
visualization/: visualize_sequence.py
