[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moving-mnist-flax"
version = "0.1.0"
description = "Moving MNIST dataset with Flax"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "torch",
    "jax",
    "flax",
]

[tool.setuptools.packages.find]
include = ["layers*", "tests*", "models*"]
exclude = ["data*", "figures*", "visualization*"]

[project.optional-dependencies]
dev = [
    "pytest",
]
