[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moving-mnist-flax"
version = "0.1.0"
description = "Moving MNIST dataset with Flax / NNx"
authors = [{name = "Lauri Kurki", email = "lauri.v.kurki@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "torch",
    "jax",
    "jaxlib",
    "flax",
    "tqdm",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["layers*", "tests*", "models*", "visualization*", "metrics*"]
exclude = ["data*", "figures*"]

[project.optional-dependencies]
dev = [
    "pytest",
]
